Added drop area

--- a/client/src/components/drive/drive.less
+++ b/client/src/components/drive/drive.less
@@ -1,3 +1,5 @@
+@import "../../utils/colors";
+
 .drive {
   margin-top: 20px;
 
@@ -8,6 +10,28 @@
   &__create {
     margin-left: 10px;
   }
+
+  &__upload-input {
+    display: none;
+  }
+
+  &__upload-label {
+    border: 2px dashed @font-color;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-left: 10px;
+  }
+}
+
+.drop-area {
+  width: 100%;
+  height: calc(100vh - 50px - 40px);
+  margin: 20px;
+  border: dashed @font-color 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
 }
 
 .popup {
