--- a/client/src/components/drive/drive.css
+++ b/client/src/components/drive/drive.css
@@ -7,6 +7,25 @@
 .drive__create {
   margin-left: 10px;
 }
+.drive__upload-input {
+  display: none;
+}
+.drive__upload-label {
+  border: 2px dashed #566885;
+  padding: 5px 10px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+.drop-area {
+  width: 100%;
+  height: calc(100vh - 50px - 40px);
+  margin: 20px;
+  border: dashed #566885 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+}
 .popup {
   width: 100%;
   height: 100vh;
