--- a/client/src/components/drive/drive.css
+++ b/client/src/components/drive/drive.css
@@ -16,6 +16,26 @@
   cursor: pointer;
   margin-left: 10px;
 }
+.drive__select {
+  margin-left: auto;
+}
+.drive__list,
+.drive__plate {
+  height: 20px;
+  width: 20px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: no-repeat center center;
+  background-size: contain;
+  margin: 0 10px;
+}
+.drive__list {
+  background-image: url("../../assets/img/list.svg");
+}
+.drive__plate {
+  background-image: url("../../assets/img/plate.svg");
+}
 .drop-area {
   width: 100%;
   height: calc(100vh - 50px - 40px);
@@ -56,5 +76,35 @@
 }
 .popup input {
   margin: 20px 0px;
+}
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 50px);
+}
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #566885;
+  border-color: #566885 transparent #566885 transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 /*# sourceMappingURL=drive.css.map */
