--- a/client/src/components/drive/drive.less
+++ b/client/src/components/drive/drive.less
@@ -21,6 +21,26 @@
     cursor: pointer;
     margin-left: 10px;
   }
+  &__select {
+    margin-left: auto;
+  }
+  &__list,
+  &__plate {
+    height: 20px;
+    width: 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: no-repeat center center;
+    background-size: contain;
+    margin: 0 10px;
+  }
+  &__list {
+    background-image: url("../../assets/img/list.svg");
+  }
+  &__plate {
+    background-image: url("../../assets/img/plate.svg");
+  }
 }
 
 .drop-area {
@@ -67,5 +87,37 @@
 
   input {
     margin: 20px 0px;
+  }
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 50px);
+}
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid @font-color;
+  border-color: @font-color transparent @font-color transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
