--- a/client/src/components/drive/fileList/fileList.css
+++ b/client/src/components/drive/fileList/fileList.css
@@ -1,19 +1,37 @@
-.filelist {
+.fileList {
   margin: 20px 0;
 }
-.filelist__header {
+.fileList__header {
   display: grid;
   grid-template-columns: 1fr 4fr repeat(4, 1fr);
 }
-.filelist__name {
+.fileList__name {
   grid-column-start: 2;
 }
-.filelist__date {
+.fileList__date {
   grid-column-start: 5;
   justify-self: center;
 }
-.filelist__size {
+.fileList__size {
   grid-column-start: 6;
   justify-self: center;
+}
+.filePlate {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0;
+}
+.file-enter-active {
+  animation: file-enter 500ms forwards;
+}
+@keyframes file-enter {
+  0% {
+    opacity: 0;
+    transform: translateY(-50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 /*# sourceMappingURL=fileList.css.map */
