--- a/client/src/components/drive/fileList/fileList.less
+++ b/client/src/components/drive/fileList/fileList.less
@@ -1,4 +1,4 @@
-.filelist {
+.fileList {
   margin: 20px 0;
 
   &__header {
@@ -16,5 +16,26 @@
   &__size {
     grid-column-start: 6;
     justify-self: center;
+  }
+}
+
+.filePlate {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0;
+}
+
+.file-enter-active {
+  animation: file-enter 500ms forwards;
+}
+
+@keyframes file-enter {
+  0% {
+    opacity: 0;
+    transform: translateY(-50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
