--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -24,6 +24,10 @@
   height: 40px;
   border-radius: 50%;
 }
+.navbar__search {
+  width: 200px;
+  margin-left: 30px;
+}
 .container {
   width: 1140px;
   display: flex;
